# KFG-Intranet

./: .gitignore  .travis-keys.tar.xz.enc  .travis.yml  CMakeLists.txt  CMakeVersionInfo.sh  KFG-Intranet.pro  Makefile  README.md  config.ini  db.qsl  defaultrequesthandler.cpp  defaultrequesthandler.h  intranet.sh  main.cpp
Intranet/: CMakeLists.txt  Intranet.pro  config.ini  db.qsl
Intranet/conf/: conf.qrc  html.ini  sessionstore.ini  static.ini
Intranet/html/: administration.html  base.html  edit.html  help.html  html.qrc  imprint.html  index.html
Intranet/img/: img.qrc
Intranet/include/: defaultrequesthandler.h
Intranet/src/: defaultrequesthandler.cpp  main.cpp
Intranet/static/: administration.css  edit.css  imprint.css  index.css  main.css  main.js  news.js  static.ini  static.qrc
debian/: changelog  conffiles  control  copyright  intranet-data.dirs  intranet-data.install  intranet.dirs  intranet.install
html/: administration.html  base.html  edit.html  imprint.html  index.html
static/: administration.css  help.css  index.css
